# osaifill-release

./: .env.example  .gitignore  CONTRIBUTING.md  GEMINI.md  LICENSE  NOTICE.md  README.md  docker-compose.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  dco.yml
backend/: .dockerignore  Dockerfile  README.md  mypy.ini  pyproject.toml
backend/src/osaifill/: crud.py  database.py  main.py  models.py  schemas.py
backend/tests/: conftest.py  test_api.py  test_budget_merge.py  test_datasets.py  test_export_logic.py  test_import_logic.py
docs/: NOTICE_DEPENDENCIES.md
frontend/: Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/public/locales/en/: translation.json
frontend/public/locales/ja/: translation.json
frontend/src/: App.tsx  i18n.ts  index.css  main.tsx
frontend/src/components/: ActualExpenseSettings.tsx  BudgetCard.tsx  BudgetForm.tsx  BudgetMergeDialog.tsx  DashboardView.tsx  DatasetForm.tsx  ImportDialog.tsx  MemberSettings.tsx  PurchaseForm.tsx  PurchaseImportDialog.tsx  PurchaseList.tsx
frontend/src/context/: DatasetContext.tsx  SettingsContext.tsx
frontend/src/lib/: api.ts  exportUtils.ts
